# cluster-api

./: .dockerignore  .gitignore  .snyk  CONTRIBUTING.md  Dockerfile  Makefile  OWNERS  README.md  go.mod  go.sum  main.go  mcps.yaml
cmd/clusterctl/: BUILD.bazel  Dockerfile
cmd/example-provider/: BUILD.bazel
cmd/manager/: BUILD.bazel
config/: kustomization.yaml
config/crds/: machine_v1beta1_machine.yaml  machine_v1beta1_machinecontrolplaneset.yaml  machine_v1beta1_machinedeployment.yaml  machine_v1beta1_machinereplicaset.yaml  machine_v1beta1_machineset.yaml
hack/: version.sh
hack/tools/: go.mod  go.sum
openshift/: Dockerfile.openshift  Makefile  core-components.yaml  e2e-openstack.sh  e2e-tests.sh  infrastructure-components-openshift.yaml  kustomization.yaml  provider-version.mk  unit-tests.sh
openshift/config/: kustomization.yaml  manager_args_patch.yaml  manager_image_patch.yaml  manager_webhook_patch.yaml  webhookcainjection_patch.yaml
openshift/ipam/: kustomization.yaml
openshift/manifests/: 0000_30_cluster-api_04_cm.core-cluster-api.yaml  0000_30_cluster-api_04_crd.core-cluster-api.yaml  core-components.yaml
openshift/patches/: enable-metadata-syncing.yaml  failure-policy-ignore-ipam-webhooks.yaml  ipam-crd-adopt-existing.yaml  ipam-crd-storage-version.yaml
openshift/tools/: go.mod  go.sum
pkg/apis/: BUILD.bazel
pkg/cert/: BUILD.bazel  cert_authority_test.go
pkg/controller/: BUILD.bazel
pkg/drain/: drain.go  (+1 more)
pkg/util/: BUILD.bazel
scripts/: ci-test.sh  fetch_ext_bins.sh
test/: go.mod  go.sum
util/: util.go  util_test.go
(+132 files in other folders)
