load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "retry.go",
        "util.go",
    ],
    importpath = "github.com/openshift/cluster-api/pkg/util",
    visibility = ["//visibility:public"],
    deps = ["//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library"],
)
